--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
         </nav>
         <div class="header-text">
           <p>Photographe-Monteur-Vidéaste-Graphiste</p>
-          <h1>
-            Salut, je suis <span>THIMOTHE HENRY NYAFOUNA</span><br />Le chouchou
-            des nanas
-          </h1>
+          <h1>Salut, je suis <span>THIMOTHE HENRY NYAFOUNA</span></h1>
         </div>
       </div>
     </div>
