--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <link rel="icon" type="image/jpeg" href="images/logo.jpg" />
+    <link rel="stylesheet" href="script.js" />
   </head>
   <body>
     <div id="header">
@@ -32,7 +33,7 @@
         </div>
       </div>
     </div>
-    <!----------------about--------->
+
     <div id="about">
       <div class="container">
         <div class="row">
@@ -62,10 +63,8 @@
               <p class="tab-links" onclick="opentab('education')">Education</p>
             </div>
 
-            <!-- COMPÉTENCES -->
             <div class="tab-contents active-tab" id="skills">
               <ul>
-                <!-- Photographie -->
                 <li>
                   <span>Photographie</span>
                   <ul>
@@ -109,7 +108,6 @@
                   </ul>
                 </li>
 
-                <!-- Montage -->
                 <li>
                   <span>Montage</span>
                   <ul>
@@ -149,7 +147,6 @@
                   </ul>
                 </li>
 
-                <!-- Vidéaste -->
                 <li>
                   <span>Vidéaste</span>
                   <ul>
@@ -190,7 +187,6 @@
                   </ul>
                 </li>
 
-                <!-- Graphiste -->
                 <li>
                   <span>Graphiste</span>
                   <ul>
@@ -234,7 +230,6 @@
               </ul>
             </div>
 
-            <!-- EXPÉRIENCE -->
             <div class="tab-contents" id="experience">
               <ul>
                 <li>
@@ -289,7 +284,6 @@
               </ul>
             </div>
 
-            <!-- Education -->
             <div class="tab-contents" id="education">
               <ul>
                 <li>
@@ -317,35 +311,11 @@
                 </li>
               </ul>
             </div>
-
-            <!-- JS -->
-            <script>
-              var tablinks = document.getElementsByClassName("tab-links");
-              var tabcontents = document.getElementsByClassName("tab-contents");
-
-              function opentab(tabname) {
-                for (let tablink of tablinks) {
-                  tablink.classList.remove("active-link");
-                }
-                for (let tabcontent of tabcontents) {
-                  tabcontent.classList.remove("active-tab");
-                }
-                event.currentTarget.classList.add("active-link");
-                document.getElementById(tabname).classList.add("active-tab");
-              }
-
-              function toggleMore(id, button) {
-                const content = document.getElementById(id);
-                const isVisible = content.style.display === "block";
-                content.style.display = isVisible ? "none" : "block";
-                button.textContent = isVisible ? "Voir plus" : "Voir moins";
-              }
-            </script>
           </div>
         </div>
       </div>
     </div>
-    <!-- Services -->
+
     <div id="services">
       <div class="container">
         <h1 class="sub-title left-align">Mes Services</h1>
@@ -387,7 +357,6 @@
       </div>
     </div>
 
-    <!-- Projets -->
     <div id="projets">
       <div class="container">
         <h1 class="sub-title left-align">Mes Projets</h1>
@@ -443,7 +412,7 @@
         >
       </div>
     </div>
-    <!-- Contact -->
+
     <div id="contact">
       <div class="container">
         <div class="row">
@@ -510,16 +479,5 @@
         <i class="fas fa-heart"></i>. Tous droits reservés.
       </p>
     </div>
-
-    <script>
-      var sidemenu = document.getElementById("sidemenu");
-
-      function openMenu() {
-        sidemenu.style.right = "0";
-      }
-      function closeMenu() {
-        sidemenu.style.right = "-200px";
-      }
-    </script>
   </body>
 </html>
