--- a/index.html
+++ b/index.html
@@ -474,12 +474,26 @@
           </div>
 
           <div class="contact-right">
-  <form action="http://formspree.io/f/meognzgw" method="POST">
-  <input type="text" name="nom" placeholder="Votre nom" required>
-  <input type="email" name="email" placeholder="Votre email" required>
-  <textarea name="message" placeholder="Votre message" required></textarea>
-  <button type="submit">Envoyer</button>
-</form>
+            <form action="https://formspree.io/f/meognzgw" method="POST">
+              <input type="text" name="name" placeholder="Votre Nom" required />
+              <input
+                type="email"
+                name="email"
+                placeholder="Votre Email"
+                required
+              />
+              <textarea
+                name="message"
+                rows="6"
+                placeholder="Votre Message"
+                required
+              ></textarea>
+              <button type="submit" class="btn btn2">Envoyer</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 <p id="confirmation-message" style="display: none; color: green;">Message envoyé avec succès !</p>
